# task--birdclef-2026

./: .gitignore  CLAUDE.md  README.md  THEORY.md  program.md  pyproject.toml  requirements.txt  skills-lock.json
.hive/: task
configs/: base.yaml
configs/augmentations/: aggressive.yaml  standard.yaml
configs/models/: eca_nfnet_l0.yaml  efficientnet_b0.yaml  efficientnet_b3.yaml  efficientnetv2_b3.yaml  efficientnetv2_s.yaml  regnety_008.yaml
configs/pseudo_label/: round1.yaml  round2.yaml  round3.yaml
eval/: eval.sh
notebooks/: baseline_selfcontained.ipynb  train_colab.ipynb
src/: dataset.py  export_openvino.py  inference.py  postprocess.py  pseudo_label.py  train.py  transforms.py  utils.py
src/models/: losses.py  sed_model.py
